Fix blurry logo (#6)

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -27,16 +27,15 @@
 	}
 
 	.logo {
-		width: 45px;
+		width: 540px;
 
 		animation-name: scale-on-scroll;
 		animation-duration: 1ms;
 		animation-fill-mode: both;
 		animation-timeline: view();
 
-		margin-top: 3rem;
-		margin-bottom: 2rem;
-		padding-top: 1rem;
+		margin-top: -6rem;
+		margin-bottom: 60rem;
 	}
 }
 
@@ -93,20 +92,19 @@
 }
 
 @keyframes scale-on-scroll {
-	90% {
-		margin-bottom: 11rem;
-		transform: scale(8);
+	60% {
+		transform: scale(1);
+	}
+	80% {
 		opacity: 1;
 	}
-	93% {
-		opacity: 1;
-	}
-	99% {
-		opacity: 0.5;
+	85% {
+		opacity: 0.25;
 	}
 	100% {
-		opacity: 0.5;
-		transform: scale(2);
+		transform: scale(0.25);
+		opacity: 0;
+		margin-bottom: -8rem;
 	}
 }
 
@@ -148,20 +146,19 @@
 	}
 
 	@keyframes scale-on-scroll {
-		90% {
-			margin-bottom: 7rem;
-			transform: scale(5);
+		60% {
+			transform: scale(0.75);
+		}
+		80% {
 			opacity: 1;
 		}
-		93% {
-			opacity: 1;
-		}
-		99% {
-			opacity: 0.5;
+		85% {
+			opacity: 0.25;
 		}
 		100% {
-			opacity: 0.5;
-			transform: scale(1);
+			transform: scale(0.2);
+			opacity: 0;
+			margin-bottom: -10rem;
 		}
 	}
 }
